# smart-qa-framework

./: .gitignore  API_TEST_GUIDE.md  ARCHITECTURE.md  Jenkinsfile  LICENSE  README.md  conftest.py  installed_packages.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test-automation-ci.yml
config/: config.ci.yaml  config.yaml
locators/: __init__.py  home_locators.py  login_locators.py
pages/pw/: __init__.py  base_page.py  home_page.py  login_page.py
pages/sel/: __init__.py
tests/backend/api/: conftest.py  test_cart_api.py
tests/frontend/pw/: __init__.py  conftest.py  test_homepage.py  test_login.py
tests/frontend/sel/: __init__.py  conftest.py  test_ai_demo.py  test_homepage_selenium.py  test_products_selenium.py
utils/: config_reader.py
utils/ai/: ai_failure_analyzer.py
utils/api/: opencart_api_client.py
