[project]
name = "automation-framework"
version = "1.0.0"
description = "Cloud-based automation testing framework"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
include = ["tests", "pages", "locators", "utils", "config"]
extraPaths = ["."]
pythonVersion = "3.11"